visual(sett): fix spacing in video capture settings

--- a/Files/src/css/component/settings/settings-achievements-sound-capture.component.scss
+++ b/Files/src/css/component/settings/settings-achievements-sound-capture.component.scss
@@ -1,5 +1,9 @@
 .sound-capture {
-    height: 160px;
+    height: 156px;
     background: rgba(255, 255, 255, 0.08);
     padding: 15px;
+
+    a {
+        margin-top: 9px;
+    }
 }
