--- a/Files/src/css/component/settings/settings-achievements-video-capture.component.scss
+++ b/Files/src/css/component/settings/settings-achievements-video-capture.component.scss
@@ -1,5 +1,5 @@
 .video-capture {
-    height: 230px;
+    height: 227px;
     background: rgba(255, 255, 255, 0.08);
     padding: 15px;
 
