--- a/Files/src/css/component/settings/settings-common.component.scss
+++ b/Files/src/css/component/settings/settings-common.component.scss
@@ -5,7 +5,7 @@
     line-height: normal;
     font-size: 14px;        
     color: #D9C3AB;
-    margin-bottom: 15px;
+    margin-bottom: 16px;
 }
 
 a {
@@ -15,6 +15,8 @@ a {
     line-height: normal;
     font-size: 12px;
     color: #D9C3AB;
+    margin-top: 5px;
+    display: block;
 
     &:hover {
         color: #FFB948;
